test/types/scalar/bradc/uint64FnInt.good
uint64FnInt.chpl:8: error: unresolved call 'foo(uint(64), int(64))'
uint64FnInt.chpl:4: note: this candidate did not match: foo(x: uint(64), y: uint(64))
uint64FnInt.chpl:8: note: because actual argument #2 with type 'int(64)'
uint64FnInt.chpl:4: note: is passed to formal 'y: uint(64)'
